trunk/Archive2/cd/bc7e72f697d300/output
main.cpp:15:21: error: expected expression
    return x.get<1>();
                    ^
1 error generated.
